# EC-ZSH

./: .gitignore  MRUDP在视频传输中的应用分析.md  README.md  tags  视频传输模块详细设计与实现总结.md  项目字节序转换分析.md  项目数据类型标识分析.md
ec2/: 5G网关.md  CMakeLists.txt  GlobalMessage.h  SysConfig101.ini  SysConfig102.ini  SysConfig103.ini  Videotransfer.md  cmd_loop.sh  config_dtu.ini  createfile.sh  ec2.h  mGlobalDef.h  main_bulktransfer.cpp  main_bulktransfer_mrudp.cpp  main_bulktransfer_mrudp_thread.cpp  main_mrudp1_1server.cpp  main_mrudp1_1server_2direction.cpp  main_mrudp1_1server_rpcclient.cpp  main_singletransfer.cpp  main_singletransfer_2direction.cpp  plan.md
ec2/BigDataTransfer/: BigDataTransferApi.cpp  BigDataTransferApi.h  BigDataTransferManager.cpp  BigDataTransferManager.h  CMakeLists.txt  FileTransferTaskState.h  TempSDKInterfaceParams.h  _w
ec2/BigDataTransfer/DataAndMessage_CPP/: AbstractDataOrMessage.cpp  FileRecvFailed.cpp  FileRecvSuccess.cpp  FileSendTaskCancel.cpp  FileTransferData.cpp
ec2/BigDataTransfer/DataAndMessage_H/: AbstractDataOrMessage.h  FileRecvFailed.h  FileRecvSuccess.h  FileSendTaskCancel.h  FileTransferData.h
ec2/BigDataTransfer/FileTransferTask_CPP/: FileTransferRecvTask.cpp  FileTransferSendTask.cpp  FileTransferTask.cpp
ec2/BulkDataTransfer/: BulkDataTransferApi.h  CMakeLists.txt  main_bulksender.cpp
ec2/DataTransfer/: CMakeLists.txt  FileReceiver.h  FileReceiver.h.bak1  FileReceiver.h.bak2  FileSender.h  GlobalTimer.h  TimerThread.h  main_rcv.cxx  main_receiver.cxx  main_sender.cxx  main_snd.cxx  readme.md
ec2/IniHandle/: CMakeLists.txt  IniHandleApi.cpp  IniHandleApi.h
ec2/MRUDP/: CMakeLists.txt  End2EndReliableTransmission.cpp  End2EndReliableTransmission.h  InitHelp.h  MRUDPApi.cpp  MRUDPApi.h  MRUDPManager.cpp  MRUDPManager.h  MRUDPSettingUtil.cpp  MRUDPSettingUtil.h  MRUDPTerm2TermConfig.h  ReliableTransferLog.cpp  ReliableTransferLog.h  SendWindowStatusRecord.cpp  SendWindowStatusRecord.h  SerializeUtil.cpp  SerializeUtil.h
ec2/NetCombTransfer/: CIMsgChannelStatusNotify.cpp  CIMsgChannelStatusNotify.h  CIMsgRemoteIDNotify.h  CIMsgRemoteIDRequest.h  CIMsgRemoteUDPPortNotify.h  CIMsgRemoteUDPPortRequest.h  CIMsgRemoteUdpPortNotify.cpp  CIMsgRouterInfoDeleteNotify.h  CIMsgRouterInfoNotify.h  CIMsgShortMessage.cpp  CIMsgShortMessage.h  CMakeLists.txt  CNetBuffer.cpp  CNetBuffer.h  CNetChannel.cpp  CNetChannel.h  CNetCombTransferBufferList.h  CNetTerminal.cpp  CNetTerminal.h  CNetTerminalManager.cpp  CNetTerminalManager.h  CRouterInfo.h  DTUVirtualServer.h  DataCodec.cpp  DataCodec.h  NetCombTransferApi.cpp  NetCombTransferApi.h  NetCombTransferBase.h  NetCombTransferCmdThread.cpp  NetCombTransferCmdThread.h  NetCombTransferDataQueue.h  SetsAndDefines.h
ec2/RBUDP/: CMakeLists.txt  CRBUDPTerm2TermConfig.cpp  CRBUDPTerm2TermConfig.h  End2EndReliableTransmission.cpp  End2EndReliableTransmission.h  InitHelp.h  RBUDPApi.cpp  RBUDPApi.h  RBUDPManager.cpp  RBUDPManager.h  RBUDPTempData.cpp  RBUDPTempData.h  RBUDPTempDataQueue.h  SerializeUtil_RBUDP.cpp  SerializeUtil_RBUDP.h
ec2/SpeedControl/: CMakeLists.txt  DataWithPacketInfo.cpp  DataWithPacketInfo.h  QosStructInterfaceInfo.h  SCGlobalDef.h  SpeedControlApi.cpp  SpeedControlApi.h  SpeedControlCallBackFunc.cpp  SpeedControlManager.cpp  SpeedControlManager.h  Term2TermTransmission.cpp  Term2TermTransmission.h
ec2/Term2TermQos/: CMakeLists.txt  DataCodec.cpp  DataCodec.h  EndToEndQos.cpp  EndToEndQos.h  InterfaceDataAbstractBuffer.h  Remote2SelfPacketQosFeedbackPacket.cpp  Remote2SelfPacketQosFeedbackPacket.h  Remote2SelfQosUnit.cpp  Remote2SelfQosUnit.h  SelfToRemoteQosUnit.cpp  SelfToRemoteQosUnit.h  TermToTermQosApi.cpp  TermToTermQosApi.h  TermToTermQosManager.cpp  TermToTermQosManager.h  bbr_circlequeue.cpp  bbr_circlequeue.h  bbr_controller.h  bbr_received_circle_packet.cpp  bbr_received_circle_packet.h  bbr_sendhistory_circle_queue.cpp  bbr_sendhistory_circle_queue.h  bbr_skiplist.cpp  bbr_skiplist.h  dllmain.cpp
ec2/Util/: AudioRtp_callback.cpp  AudioRtp_callback.h  Ffmpeg_Decode.h  LockGuard.h  MyEncoder.h  SystemTimeFunc.cpp  VideoRtp_callback.cpp  VideoRtp_callback.h  isRBUDP_callback.cpp
ec2/ec2_ui_temp_cmake/: AudioReceiverCore.cpp  AudioReceiverCore.h  AudioSenderCore.cpp  AudioSenderCore.h  AutoConnController.cpp  AutoConnController.h  AutoConnWindow.cpp  AutoConnWindow.h  AutoConnWindow.ui  CMakeLists.txt  FileWatchDog.cpp  FileWatchDog.h  RateChartWidget.cpp  RateChartWidget.h  RealtimeStreamDialog.cpp  RealtimeStreamDialog.h  ReceiveHistoryTab.cpp  ReceiveHistoryTab.h  ResizableLabel.h  SatelliteImageWidget.cpp  SatelliteImageWidget.h  SendHistoryTab.cpp  SendHistoryTab.h  VideoReceiver.cpp  VideoReceiver.h  VideoSender.cpp  VideoSender.h  audio_selftest.cpp  function.cpp  function.h  main.cpp  main_autoconn.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  playerwidget.cpp  playerwidget.h  temppage.cpp  temppage.h  temppage.ui
ec2/epollComm/: CBCast.cpp  CBCast.h  CIPSOCKET.cpp  CIPSOCKET.h  CMakeLists.txt  CNetChannelList.h  CNetCommEpoll.cpp  CNetCommEpoll.h  CTCP.cpp  CTCP.h  CUDP.cpp  CUDP.h  ChannelManager.cpp  ChannelManager.h  EpollCommApi.cpp  EpollCommApi.h  MCPtrList.h  main.cpp  tcpSocketInfoTool.h
ec2/infoHub/: CMakeLists.txt  infoHub.cpp  infoHub.h  infoHubRpcClient.h  infoHubRpcServer.h  infoHub_impl.cpp  infoHub_impl.h  main  main.cpp  main2  main2.cpp  main3  main3.cpp  main4_rpc_client  main4_rpc_client.cpp  main4_rpc_client2  main4_rpc_client2.cpp  main4_rpc_server.cpp  main4_rpc_server2.cpp  main4_rpc_test_client  main4_rpc_test_client.cpp  main4_rpc_test_server  main4_rpc_test_server.cpp  main5_progress  main5_progress.cpp  progressStatistic.h  progressStatisticTable.h  rateStatistic.h  rateStatisticTable.h
ec2/msg_cpp/: msg.pb.cc  msg.pb.h
ec2/msg_proto/: msg.proto
ec2/public/: _ftp.cpp  _ftp.h  _public.cpp  _public.h  object_pool.hpp  utility.cc  utility.h
ec2/test/: CMakeLists.txt  CMakeLists.txt.bak  SysConfig101.ini  SysConfig102.ini  test_mrudp1_1server.cpp  test_mrudp2_2server.cpp  test_mrudp3_filetrans_withmsg.cpp  test_rbudp1_filetrans.cpp
(+333 files in other folders)
